--- a/views/admin/demovideos/headimage.ejs
+++ b/views/admin/demovideos/headimage.ejs
@@ -33,12 +33,12 @@
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<form
-					action="/admin/sliderrevolution"
+					action="/admin/bannerimg"
 					method="post"
 					class="imgform"
 					enctype="multipart/form-data"
 				>
-					<h1 class="m-5">Demovideos Image</h1>
+					<h1 class="m-5">DemoVideos Image</h1>
 					<table class="table" style="width: 70%">
 						<thead>
 							<tr>
