--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -142,6 +142,28 @@
 						>
 					</li>
 				</ul>
+				<ul
+					class="
+						btn-toggle-nav
+						list-unstyled
+						fw-normal
+						pb-1
+						ms-4
+						d-flex
+						flex-column
+						justify-content-center
+						fs-6
+						mt-2
+						ms-4
+						small
+					"
+				>
+					<li>
+						<a href="/admin/bannerimg" class="link-dark rounded ahover"
+							>Banner Image</a
+						>
+					</li>
+				</ul>
 			</div>
 		</li>
 		<li class="mb-4">
