--- a/views/admin/successstories/parenttestimonial.ejs
+++ b/views/admin/successstories/parenttestimonial.ejs
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin panel</title>
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
-    <link rel="stylesheet" href="../../stylesheets/admin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,7 +31,7 @@
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSideBar') %></div>
-      <div class="right" style="height: auto;">
+      <div class="right" style="height: auto">
         <div class="preview">
           <h1 class="mb-5">Parent Testimonials</h1>
           <form
@@ -42,20 +41,22 @@
             style="width: 100%"
             enctype="multipart/form-data"
           >
-          <div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
-            <span class="input-group-text" id="addon-wrapping">Add Name</span>
-            <input
-              type="text"
-              name="studentname"
-              class="form-control"
-              aria-label="studentname"
-              aria-describedby="addon-wrapping"
-              id="uploadlink"
-              placeholder="studentname"
-            />
-          </div>
             <div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">Add Youtubelink</span>
+              <span class="input-group-text" id="addon-wrapping">Add Name</span>
+              <input
+                type="text"
+                name="studentname"
+                class="form-control"
+                aria-label="studentname"
+                aria-describedby="addon-wrapping"
+                id="uploadlink"
+                placeholder="studentname"
+              />
+            </div>
+            <div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
+              <span class="input-group-text" id="addon-wrapping"
+                >Add Youtubelink</span
+              >
               <input
                 type="url"
                 name="youtubelink"
@@ -67,7 +68,9 @@
               />
             </div>
             <div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">Add Image</span>
+              <span class="input-group-text" id="addon-wrapping"
+                >Add Image</span
+              >
               <input
                 type="file"
                 name="studentimg"
@@ -82,8 +85,8 @@
                 type="button"
                 class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
               >
-                Back</button
-              >
+                Back
+              </button>
               <button type="submit" class="btn btn-outline-primary mt-5">
                 submit
               </button>
@@ -96,7 +99,7 @@
           class="imgform"
         >
           <h1 class="m-5">Parent Testimonials</h1>
- 
+
           <table class="table" style="width: 70%">
             <thead>
               <tr>
@@ -141,7 +144,11 @@
             <button type="button" class="btn btn-outline-primary addbtn px-4">
               Add
             </button>
-            <button class="btn btn-outline-danger submit ms-5 px-3 submitbtn" disabled>
+            <button
+              type="button"
+              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+              disabled
+            >
               Delete
             </button>
           </div>
@@ -155,6 +162,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="../../javascripts/admin/results/studentdetails.js"></script>
+    <script src="../../javascripts/admin/successstories/successstories.js"></script>
   </body>
 </html>
