--- a/views/admin/successstories/testimonials.ejs
+++ b/views/admin/successstories/testimonials.ejs
@@ -145,6 +145,7 @@
 							Add
 						</button>
 						<button
+							type="button"
 							class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
 							disabled
 						>
@@ -161,6 +162,6 @@
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 			crossorigin="anonymous"
 		></script>
-		<script src="../../javascripts/admin/results/studentdetails.js"></script>
+		<script src="../../javascripts/admin/successstories/successstories.js"></script>
 	</body>
 </html>
