--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -158,7 +158,7 @@
 				<form
 					action="/admin/results/studentdetails?_method=DELETE"
 					method="post"
-					class="imgform"
+					class="imgform latestupdateform"
 				>
 					<h1 class="m-5">Student Details</h1>
 
