--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -1,160 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../../stylesheets/admin.css" />
-    <link rel="stylesheet" href="sweetalert2.min.css" />
-  </head>
-  <body>
-    <%- include('../../layout/adminheader') %>
-    <section class="mainsection">
-      <div class="left"><%- include('../../layout/adminSideBar') %></div>
-      <div class="right">
-        <div class="preview">
-          <h1 class="mb-5">Calendar Events</h1>
-          <form
-            action="/admin/calendarevents"
-            method="post"
-            class="d-flex justify-content-center align-items-center flex-column"
-            style="width: 100%"
-          >
-            <div class="input-group flex-nowrap" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping"
-                >Add Event</span
-              >
-              <input
-                type="text"
-                name="event"
-                class="form-control inputtext"
-                aria-label="Username"
-                aria-describedby="addon-wrapping"
-                id="uploadlink"
-                minlength="10"
-                maxlength="150"
-                required
-              />
-            </div>
-            <div class="d-flex justify-content-end" style="width: 80%">
-              <p class="spanp">
-                Characters left &nbsp;<span class="changablespan"></span
-                ><span>/150</span>
-              </p>
-            </div>
-            <div class="input-group flex-nowrap mt-4" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">Add Date</span>
-              <input
-                type="date"
-                name="date"
-                class="form-control"
-                aria-label="Username"
-                aria-describedby="addon-wrapping"
-                id="uploadlink"
-                minlength="10"
-                maxlength="150"
-                required
-              />
-            </div>
-            <div>
-              <button
-                type="button"
-                class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
-              >
-                Back
-              </button>
-              <button type="submit" class="btn btn-outline-primary mt-5">
-                submit
-              </button>
-            </div>
-          </form>
-        </div>
-        <form
-          action="/admin/calendarevents?_method=DELETE"
-          method="post"
-          class="imgform"
-        >
-          <h1 class="m-5">Calendar Events</h1>
-          <table class="table" style="width: 70%">
-            <thead>
-              <tr>
-                <th scope="col">Date</th>
-                <th scope="col">Month</th>
-                <th scope="col">Event</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% calendar.forEach(i => { %>
-              <tr>
-                <td>
-                  <input
-                    type="text"
-                    id="linkinput"
-                    value="<%= i.date %>"
-                    readonly
-                    style="width: 80%; border: none"
-                  />
-                </td>
-                <td>
-                  <input
-                    type="text"
-                    id="linkinput"
-                    value="<%= i.month %>"
-                    readonly
-                    style="width: 80%; border: none"
-                  />
-                </td>
-                <td>
-                  <input
-                    type="text"
-                    id="linkinput"
-                    value="<%= i.event %>"
-                    readonly
-                    style="width: 80%; border: none"
-                  />
-                </td>
-                <td>
-                  <input
-                    type="checkbox"
-                    id="checkbox"
-                    class="updatesCheckbox"
-                    name="checkbox"
-                    value="<%= i.event %>"
-                    style="height: 20px; width: 20px"
-                  />
-                </td>
-              </tr>
-              <% }) %>
-            </tbody>
-          </table>
-          <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4">
-              Add
-            </button>
-            <button
-              type="button"
-              disabled
-              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
-            >
-              Delete
-            </button>
-          </div>
-        </form>
-      </div>
-    </section>
-    <script src="../../javascripts/admin/home/LatestUpdates.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Admin</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="../../stylesheets/admin.css" />
+		<link rel="stylesheet" href="sweetalert2.min.css" />
+	</head>
+	<body>
+		<%- include('../../layout/adminheader') %>
+		<section class="mainsection">
+			<div class="left"><%- include('../../layout/adminSideBar') %></div>
+			<div class="right">
+				<div class="preview">
+					<h1 class="mb-5">Calendar Events</h1>
+					<form
+						action="/admin/calendarevents"
+						method="post"
+						class="d-flex justify-content-center align-items-center flex-column"
+						style="width: 100%"
+					>
+						<div class="input-group flex-nowrap" style="width: 80%">
+							<span class="input-group-text" id="addon-wrapping"
+								>Add Event</span
+							>
+							<input
+								type="text"
+								name="event"
+								class="form-control inputtext"
+								aria-label="Username"
+								aria-describedby="addon-wrapping"
+								id="uploadlink"
+								minlength="10"
+								maxlength="150"
+								required
+							/>
+						</div>
+						<div class="d-flex justify-content-end" style="width: 80%">
+							<p class="spanp">
+								Characters left &nbsp;<span class="changablespan"></span
+								><span>/150</span>
+							</p>
+						</div>
+						<div class="input-group flex-nowrap mt-4" style="width: 80%">
+							<span class="input-group-text" id="addon-wrapping">Add Date</span>
+							<input
+								type="date"
+								name="date"
+								class="form-control"
+								aria-label="Username"
+								aria-describedby="addon-wrapping"
+								id="uploadlink"
+								minlength="10"
+								maxlength="150"
+								required
+							/>
+						</div>
+						<div>
+							<button
+								type="button"
+								class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+							>
+								Back
+							</button>
+							<button type="submit" class="btn btn-outline-primary mt-5">
+								submit
+							</button>
+						</div>
+					</form>
+				</div>
+				<form
+					action="/admin/calendarevents?_method=DELETE"
+					method="post"
+					class="imgform latestupdateform"
+				>
+					<h1 class="m-5">Calendar Events</h1>
+					<table class="table" style="width: 70%">
+						<thead>
+							<tr>
+								<th scope="col">Date</th>
+								<th scope="col">Month</th>
+								<th scope="col">Event</th>
+							</tr>
+						</thead>
+						<tbody>
+							<% calendar.forEach(i => { %>
+							<tr>
+								<td>
+									<input
+										type="text"
+										id="linkinput"
+										value="<%= i.date %>"
+										readonly
+										style="width: 80%; border: none"
+									/>
+								</td>
+								<td>
+									<input
+										type="text"
+										id="linkinput"
+										value="<%= i.month %>"
+										readonly
+										style="width: 80%; border: none"
+									/>
+								</td>
+								<td>
+									<input
+										type="text"
+										id="linkinput"
+										value="<%= i.event %>"
+										readonly
+										style="width: 80%; border: none"
+									/>
+								</td>
+								<td>
+									<input
+										type="checkbox"
+										id="checkbox"
+										class="updatesCheckbox"
+										name="checkbox"
+										value="<%= i.event %>"
+										style="height: 20px; width: 20px"
+									/>
+								</td>
+							</tr>
+							<% }) %>
+						</tbody>
+					</table>
+					<div class="buttondiv">
+						<button type="button" class="btn btn-outline-primary addbtn px-4">
+							Add
+						</button>
+						<button
+							type="button"
+							disabled
+							class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+						>
+							Delete
+						</button>
+					</div>
+				</form>
+			</div>
+		</section>
+		<script src="../../javascripts/admin/home/latestUpdates.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
