--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -18,7 +18,7 @@
 	<%- include('./layout/header') %>
 		<%- include('./chatbot') %>
 
-			<section class="Getyourvideos">
+			<section class="Getyourvideos" style="  background: url('<%= img.sliderimg %>') center/cover;"> 
 
 			</section>
 			<section class="gridcontainer">
@@ -31,9 +31,7 @@
 									allowfullscreen></iframe>
 							</div>
 						</div>
-						<% }) %>
-
-
+					<% }) %>
 				</div>
 				<!-- <iframe
 				class="griditem"
@@ -91,7 +89,7 @@
 			<script src="../javascripts/courses.js"></script>
 			<script src="../javascripts/common.js"></script>
 			<%- include('./layout/footer') %>
-				<script src="javascripts/chatbot.js"></script>
+			<script src="javascripts/chatbot.js"></script>
 </body>
 
 </html>
