--- a/views/results.ejs
+++ b/views/results.ejs
@@ -130,6 +130,11 @@
 
 		<%- include('./layout/footer') %>
 
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+		/>
+
 		<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 		<script src="javascripts/results.js"></script>
 		<script src="javascripts/nav.js"></script>
