--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -75,7 +75,7 @@
 						enctype="text/plain"
 					>
 						<div class="input-container">
-							<label for="name">Name</label>
+							<label for="name">Name <span style="color: red">*</span></label>
 							<input
 								type="text"
 								name="name"
@@ -97,7 +97,7 @@
 							<div class="phoneError"></div>
 						</div>
 						<div class="input-container">
-							<label for="phone">Email</label>
+							<label for="phone">Email <span style="color: red">*</span></label>
 							<input
 								type="email"
 								name="email"
@@ -107,7 +107,7 @@
 							<div class="emailError"></div>
 						</div>
 						<div class="textarea-container">
-							<label for="message">Comment</label>
+							<label for="message">Comment <span style="color: red">*</span></label>
 							<textarea
 								name="message"
 								class="form-input comment-input"
