--- a/views/results.ejs
+++ b/views/results.ejs
@@ -20,16 +20,16 @@
 			<div class="swiper-wrapper">
 				<!-- Slides -->
 				<div class="swiper-slide">
-					<img src="./images/GALLERY/2019/2019img1.jpg" alt="" />
+					<img src="../images/GALLERY/2019/2019img1.jpg" alt="" />
 				</div>
 				<div class="swiper-slide">
-					<img src="./images/GALLERY/2019/2019img2.jpg" alt="" />
+					<img src="../images/GALLERY/2019/2019img2.jpg" alt="" />
 				</div>
 				<div class="swiper-slide">
-					<img src="./images/GALLERY/2019/2019img3.jpg" alt="" />
+					<img src="../images/GALLERY/2019/2019img3.jpg" alt="" />
 				</div>
 				<div class="swiper-slide">
-					<img src="./images/GALLERY/2019/2019img4.jpg" alt="" />
+					<img src="../images/GALLERY/2019/2019img4.jpg" alt="" />
 				</div>
 			</div>
 			<!-- If we need pagination -->
