--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -23,46 +23,54 @@ body.dark {
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
+
 .grid {
   position: relative;
-  /* height: 10rem;
-	width: 30%; */
   width: 100%;
   border: 1px solid black;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  left: 50%;
+  transform: translateX(-50%);
 }
 iframe {
   z-index: 4;
 }
 .griditem {
-  width: 100%;
+  width: 28rem;
   height: 15rem;
   padding: 0.5rem;
   border: 15px solid #02c3d8;
-  margin: 5%;
+  margin: 25px;
   border-radius: 20px 0px 20px 0px;
 }
 @media (max-width: 1100px) {
-  .gridcontainer {
+  .grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 800px) {
-  .gridcontainer {
+  .grid {
     width: 70%;
     grid-template-columns: repeat(1, 1fr);
   }
+  
 }
 
 @media (max-width: 600px) {
-  .gridcontainer {
+  .grid {
     width: 90%;
     grid-template-columns: repeat(1, 1fr);
+
   }
+  .griditem{
+    margin: 0;
+  }
+  
+
 }
 /* demovideos  */
 .gridbox {
@@ -74,4 +82,10 @@ iframe {
   align-items: center;
   background-color: white;
   border-radius: 30px 0 30px 0;
+}
+
+.video
+{
+  width: 100%;
+  height: 100%;
 }
