--- a/views/results.ejs
+++ b/views/results.ejs
@@ -19,18 +19,11 @@
 			<!-- Additional required wrapper -->
 			<div class="swiper-wrapper">
 				<!-- Slides -->
+				<% slider.forEach(i => { %>
 				<div class="swiper-slide">
-					<img src="images/GALLERY/2019/2019img1.jpg" alt="" />
+					<img src="<%= i.sliderimg %>" alt="" />
 				</div>
-				<div class="swiper-slide">
-					<img src="images/GALLERY/2019/2019img2.jpg" alt="" />
-				</div>
-				<div class="swiper-slide">
-					<img src="images/GALLERY/2019/2019img3.jpg" alt="" />
-				</div>
-				<div class="swiper-slide">
-					<img src="images/GALLERY/2019/2019img4.jpg" alt="" />
-				</div>
+				<% }) %>
 			</div>
 			<!-- If we need pagination -->
 			<div class="swiper-pagination"></div>
