--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -3,6 +3,10 @@ body.dark {
   color: white;
 }
 
+body.dark .chat {
+	color: black !important;
+}
+
 .Getyourvideos {
   width: 100%;
   height: 100vh;
