--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -799,6 +799,7 @@ iframe {
 .dropdown {
 	width: 10%;
 	height: 50px;
+	cursor: pointer;
 	border-radius: 25px;
 	position: relative;
 	background-color: white;
