--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -4,6 +4,9 @@
 	box-sizing: border-box;
     font-family: "Roboto", sans-serif;
 }
+body {
+	overflow: hidden;
+}
 .loginpage {
 	width: 100%;
 	height: 100vh;
