--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheets/login.css" />
+    <link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
     <title>Login</title>
   </head>
   <body>
+    <section class="removesection">
+      <% if(success && success.length) {%>
+        <div class="d-flex justify-content-center alert alert-success alert-dismissible fade show" role="alert" style="margin: 0px;">
+          <b><%= success %></b>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true"></span>
+          </button>
+        </div>
+      <% } %>
+        
+      <% if(error && error.length) {%>
+        <div class="d-flex justify-content-center alert alert-danger alert-dismissible fade show mb-0" role="alert">
+          <b><%= error %></b>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true"></span>
+          </button>
+        </div>
+      <% } %>
+    </section>
     <section class="loginpage">
     <div class="login">
     <form 
@@ -21,7 +46,7 @@
       </div>
       <div class="Username" >
         <label for="username">Enter your username</label>
-        <input type="text" placeholder="Username" name="username" id="username" autofocus/>
+        <input type="text" placeholder="Username" name="username" id="username" autofocus required/>
       </div>
       <div class="Username">
         <label for="password">Enter your password</label>
@@ -30,6 +55,7 @@
           placeholder="Password"
           name="password"
           id="password"
+          required
         />
       </div>
 
@@ -39,8 +65,14 @@
     </form>
   </div>
   </section>
-    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-analytics.js"></script>
+    <script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
     <script src="javascripts/auth.js"></script>
   </body>
 </html>
+
+
+
