--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -115,7 +115,7 @@
 										id="checkbox"
 										class="updatesCheckbox"
 										name="checkbox"
-										value="<%= i %>"
+										value="<%= i.link %>"
 										style="height: 20px; width: 20px"
 									/>
 								</td>
