--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -199,9 +199,9 @@
 				aria-label=".form-select-lg example"
 				data-select=""
 			>
-				<option selected value="2021" data-year="2021">2021</option>
+				<option value="2021" data-year="2021">2021</option>
 				<option value="2020" data-year="2020">2020</option>
-				<option value="2019" data-year="2019">2019</option>
+				<option selected value="2019" data-year="2019">2019</option>
 				<option value="2018" data-year="2018">2018</option>
 			</select>
 			<!-- <div class="btngrp"><div class="prev-btn btn" data-year="2019">Previous Year</div><div data-year="2020" class="current-btn btn">Next Year</div></div> -->
@@ -210,7 +210,7 @@
 				<div class="galleryItem">
 					<img
 						id="imageid"
-						src="../images/GALLERY/2019/2019img<%= i %>.jpg"
+						src="images/GALLERY/2019/2019img<%= i %>.jpg"
 						alt=""
 					/>
 				</div>
