--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -452,8 +452,8 @@ iframe {
 .galleryItem {
 	height: 100%;
 	width: 100%;
-	background-color: #2b72e4;
-
+	/* background-color: #2b72e4; */
+	
 	/* overflow: hidden; */
 }
 .galleryItem img:hover {
@@ -800,15 +800,18 @@ iframe {
 	width: 10%;
 	height: 50px;
 	cursor: pointer;
-	border-radius: 25px;
+	border-radius: 10px 0px 10px 0px;
 	position: relative;
-	background-color: white;
-	border: 5px solid #568037;
-	color: #568037;
+	background: linear-gradient(#4885e7, #19cae6);
+	/* border: 5px solid #568037; */
+	color: #000000;
 	text-align: center;
-	font-size: 20px;
+	font-size: 22px;
 	font-weight: 600;
 	margin: 2rem 0rem 0rem 0rem;
+}
+.dropdown * {
+	border-radius: 10px 0px 10px 0px;
 }
 .styled-select select {
 	background: transparent;
@@ -820,4 +823,11 @@ iframe {
 	position: absolute;
 	left: 0;
 	top: 0;
+}
+
+
+
+/** Custom Select **/
+select:hover {
+	background-color: #fff !important;
 }
