--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -11,6 +11,13 @@
 		></script>
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 		<title>Aboutus</title>
+		<style>
+			.aboutusnav{
+			background-color: #369afe;
+			border-radius: 0% 50% 0% 50%;
+			color: white;
+		}
+		</style>
 	</head>
 	<body>
 		<div class="previewImg">
