--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -8,6 +8,13 @@
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 
 		<title>Contact Us</title>
+		<style>
+			.contactusnav{
+			background-color: #369afe;
+			border-radius: 0% 50% 0% 50%;
+			color: white;
+		}
+		</style>
 	</head>
 	<body>
 		<%- include('./layout/header') %> <%- include('./chatbot') %>
