--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -7,6 +7,13 @@
 		<link rel="stylesheet" href="courses.css" />
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 		<title>Courses</title>
+		<style>
+			.coursesnav{
+			background-color: #60efff;
+			border-radius: 0% 50% 0% 50%;
+            color: rgb(0, 0, 0);
+		}
+		</style>
 	</head>
 	<body>
 		<%- include('./layout/header') %> <%- include('./chatbot') %>
