--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -12,6 +12,13 @@
 	<link rel="stylesheet" href="stylesheets/chatbot.css" />
 
 	<title>Demo Videos</title>
+	<style>
+		.Demovideosnav{
+			background-color: #60efff;
+			border-radius: 0% 50% 0% 50%;
+            color: rgb(0, 0, 0);
+		}
+	</style>
 </head>
 
 <body>
