--- a/views/results.ejs
+++ b/views/results.ejs
@@ -12,6 +12,14 @@
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 
 		<title>Results</title>
+		<style>
+			
+		.resultsnav{
+			background-color: #60efff;
+			border-radius: 0% 50% 0% 50%;
+            color: rgb(0, 0, 0);
+		}
+		</style>
 	</head>
 	<body>
 		<%- include('./layout/header') %> <%- include('./chatbot') %>
