--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -9,6 +9,13 @@
 	<link rel="stylesheet" href="../stylesheets/successStories2.css" />
 	<link rel="stylesheet" href="stylesheets/common.css" />
 	<link rel="stylesheet" href="stylesheets/chatbot.css" />
+	<style>
+		.successstoriesnav{
+			background-color: #369afe;
+			border-radius: 0% 50% 0% 50%;
+			color: white;
+		}
+	</style>
 </head>
 
 <body>
