--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -10,13 +10,13 @@
 						src="images/home/logowbg2.png" alt=""></a>
 				<!-- site menu/nav -->
 				<ul>
-					<li><a class="even" href="/">Home</a></li>
-					<li><a class="odd" href="/#courses"><b>Courses</b></a></li>
-					<li><a class="even" href="/Aboutus"><b>About Us</b></a></li>
-					<li><a class="odd" href="/Demovideos"><b>Demo Videos</b></a></li>
-					<li><a class="even" href="/successstories"><b>Success Stories</b></a></li>
-					<li><a class="odd" href="/results"><b>Results</b></a></li>
-					<li><a class="even" href="/contactus"><b>Contact Us</b></a></li>
+					<li><a class="even homenav" href="/">Home</a></li>
+					<li><a class="odd coursesnav" href="/#courses"><b>Courses</b></a></li>
+					<li><a class="even aboutusnav" href="/Aboutus"><b>About Us</b></a></li>
+					<li><a class="odd Demovideosnav" href="/Demovideos"><b>Demo Videos</b></a></li>
+					<li><a class="even successstoriesnav" href="/successstories"><b>Success Stories</b></a></li>
+					<li><a class="odd resultsnav" href="/results"><b>Results</b></a></li>
+					<li><a class="even contactusnav" href="/contactus"><b>Contact Us</b></a></li>
 					<li class="dark-mode-toggle"></li>
 				</ul>
 				<!-- nav-toggler for mobile version only -->
