--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -82,7 +82,7 @@
 								class="form-input name-input"
 								id="name"
 							/>
-							<div class="nameError"></div>
+							<div class="nameError err"></div>
 						</div>
 						<div class="input-container">
 							<label for="phone"
@@ -94,7 +94,7 @@
 								class="form-input phonenum"
 								id="phone"
 							/>
-							<div class="phoneError"></div>
+							<div class="phoneError err"></div>
 						</div>
 						<div class="input-container">
 							<label for="phone">Email <span style="color: red">*</span></label>
@@ -104,7 +104,7 @@
 								class="form-input email-input"
 								id="email"
 							/>
-							<div class="emailError"></div>
+							<div class="emailError err"></div>
 						</div>
 						<div class="textarea-container">
 							<label for="message">Comment <span style="color: red">*</span></label>
@@ -113,7 +113,7 @@
 								class="form-input comment-input"
 								id="message"
 							></textarea>
-							<div class="commentError"></div>
+							<div class="commentError err"></div>
 						</div>
 						<div class="button-container">
 							<button class="submit">Submit</button>
