--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -9,6 +9,7 @@
 				<a href="/" class="site-logo"><img draggable="false" class="site-logo-img"
 						src="images/home/logowbg2.png" alt=""></a>
 				<!-- site menu/nav -->
+				<div  class="nav2" >
 				<ul>
 					<li><a class="even" href="/">Home</a></li>
 					<li><a class="odd" href="/#courses"><b>Courses</b></a></li>
@@ -17,12 +18,16 @@
 					<li><a class="even" href="/successstories"><b>Success Stories</b></a></li>
 					<li><a class="odd" href="/results"><b>Results</b></a></li>
 					<li><a class="even" href="/contactus"><b>Contact Us</b></a></li>
-					<li class="dark-mode-toggle"></li>
+					
 				</ul>
-				<!-- nav-toggler for mobile version only -->
+				<span class="dark-mode-toggle"></span>
 				<button class="nav-toggler">
 					<span></span>
 				</button>
+				</div>
+				<!-- nav-toggler for mobile version only -->
+				
+				
 			</nav>
 		</div>
 	</div><!-- navbar-area end -->
