--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -265,4 +265,9 @@
 	</ul>
 </div>
 
+<% if(success && success.length) {%>
+	<p class="sweetp"><%= success %> </p>
+<% } %>
+
+
 <script src="../../javascripts/admin/header.js"></script>
