--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1003,6 +1003,9 @@ p {
 	color: black;
 	font-size: 1.5rem;
 }
+body.dark .studentsh1 {
+	color: white;
+}
 .video {
 	height: 28vh;
 	width: 23vw;
