--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="stylesheets/contactus.css" />
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
-
+		<link rel="stylesheet" href="sweetalert2.min.css">
 		<title>Contact Us</title>
 		<style>
 			.contactusnav{
@@ -128,7 +128,13 @@
 				</div>
 			</div>
 		</section>
+
+		<% if(success && success.length) {%>
+			<p class="sweetp"><%= success %> </p>
+		<% } %>
+
 		<%- include('./layout/footer') %>
+		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/contactus.js"></script>
 		<script src="javascripts/common.js"></script>
