--- a/views/results.ejs
+++ b/views/results.ejs
@@ -62,7 +62,9 @@
 				></div>
 				<% }) %>
 				<div class="griditem1 gridbox">
-					<img class="imgTopper" src="" />
+					<span class="imgTopperspan">
+						<img class="imgTopper" src="" />
+					</span>
 					<span class="griditem1span"
 						><h3 class="nameStudent"></h3>
 						<p class="scoreStudent"></p
