--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -536,17 +536,7 @@ iframe {
 	background: #696969 !important;
 }
 
-@media screen and (max-width: 600px) {
-	.slide {
-		height: fit-content;
-	}
-	.container {
-		height: 200px;
-	}
-	button {
-		top: 50%;
-	}
-}
+
 
 /* app */
 .app {
@@ -595,17 +585,18 @@ iframe {
 
 .apppage h2 {
 	position: absolute;
-	right: 40%;
+	right: 44%;
 	top: 104px;
-	font-size: 44px;
+	font-size: 38px;
 	font-weight: 600;
 }
 .apppage a img {
-	width: 17%;
+	width: 20%;
 	height: 15%;
 	position: absolute;
-	top: 15rem;
-	right: 54%;
+	top: 14rem;
+	right: 50%;
+	border-radius: 10px;
 }
 /* mobile view */
 .apppage {
@@ -630,6 +621,19 @@ iframe {
 	position: absolute;
 	left: 4%;
 	width: 24%;
+	border-radius: 10px;
+}
+
+@media(max-width: 1250px){
+	.apppage h2 {
+		right: 40%;
+		font-size: 34px;
+	} 
+	.apppage a img{
+		top: 13rem;
+		width: 20%;
+		right: 50%;
+	} 
 }
 @media (max-width: 1150px) {
 	.galleryMain {
@@ -639,7 +643,7 @@ iframe {
 		display: none;
 	}
 	.timelineContent {
-		width: 90%;
+		width: 70%;
 		margin-left: auto;
 		margin-right: auto;
 	}
@@ -648,10 +652,27 @@ iframe {
 	}
 	.apppage h2 {
 		position: absolute;
-		right: 0%;
+		right: 37%;
 		top: 104px;
-		font-size: 44px;
+		font-size: 34px;
 		font-weight: 600;
+	}
+}
+@media(max-width:1110px){
+	iframe {
+		position: relative;
+		width: 50vw;
+		height: 55vh;
+	}
+	.apppage h2 {
+		right: 41%;
+		font-size: 30px;
+	}
+	.apppage a img{
+		top: 13rem;
+		right: 50%;
+		width: 20%;
+	    height: 15%;
 	}
 }
 @media (max-width: 1000px) {
@@ -660,6 +681,14 @@ iframe {
 		width: 50vw;
 		height: 55vh;
 	}
+	.apppage h2 {
+		right: 40%;
+		font-size: 28px;
+	} 
+	.apppage a img{
+		top: 13rem;
+	} 
+
 }
 
 @media (max-width: 900px) {
@@ -692,8 +721,52 @@ iframe {
 		width: 70vw;
 		height: 55vh;
 	}
+	.apppage h2 {
+		right: 4%;
+		font-size: 40px;
+	} 
+	.apppage a img{
+		top: 14rem;
+		width: 25%;
+	    height: 15%;
+		right: 29%;
+	} 
+	.vector1 {
+		display: none;
+	}
+	.Vector2 {
+		display: none;
+	}
+	.vector3 {
+		display: none;
+	}
+	.Messaging{
+		left: 5%;
+        width: 40%;
+	}
 }
-@media (max-width: 600px) {
+@media(max-width: 800px){
+	.apppage h2 {
+		right: 17%;
+		font-size: 26px;
+	} 
+	.apppage a img{
+		top: 14rem;
+		width: 25%;
+	    height: 15%;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.slide {
+		height: fit-content;
+	}
+	.container {
+		height: 200px;
+	}
+	button {
+		top: 50%;
+	}
 	.btngrp {
 		width: 70%;
 	}
@@ -726,7 +799,7 @@ iframe {
 	}
 	.timelinePara p {
 		/* line-height: 2rem; */
-		min-height: 200px;
+		min-height: 120px;
 		font-size: 15px;
 	}
 	.timelineDiv {
@@ -747,7 +820,17 @@ iframe {
 		line-height: 2.3rem;
 		padding: 0rem 3rem;
 	}
+	.apppage h2 {
+		right: 7%;
+		font-size: 25px;
+	} 
+	.apppage a img{
+		top: 13rem;
+		width: 25%;
+	    height: 15%;
+	}
 }
+
 @media (max-width: 500px) {
 	.gallery {
 		margin-bottom: 0rem;
@@ -764,7 +847,44 @@ iframe {
 		width: 70vw;
 		height: 25vh;
 	}
+	.apppage h2 {
+		right: 18%;
+		font-size: 25px;
+		
+		top: 57%;
+	} 
+	.apppage a img{
+		top: 19rem;
+		width: 65%;
+	    height: 15%;
+		left: 18%;
+	} 
+	.apppage{
+		width: 90%;
+	}
+	.vector1 {
+		display: none;
+	}
+	.Vector2 {
+		display: none;
+	}
+	.vector3 {
+		display: none;
+	}
+	.Messaging{
+		left: 23%;
+        width: 56%;
+		top: 4%;
+	}
+	.dropdown{
+		width: 35%;
+	}
+	.apppage{
+		width: 85%;
+	}
 }
+
+
 
 /* popup0 */
 
